2/01/ping-pong/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
  namespace: exercise-namespace
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
